Removed font size.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,13 @@
         <title>jching.xyz</title>
     </head>
     <style>
-        h1, p, label, input {
+        p, label, input {
             font-family: sans-serif;
-            font-size: 14px;
-            margin-right: 10px;
             -webkit-font-smoothing: antialiased;
         }
 
         code {
             font-family: monospace;
-            font-size: 12px;
             -webkit-font-smoothing: antialiased;
         }
 
@@ -43,7 +40,7 @@
         }
 
         .tag {
-            border-radius: 8px;
+            border-radius: 10px;
             color: #fff;
             padding: 0.1em 0.4em;
             text-decoration-line: none;
