--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
     <body>
         <div class="container">
             <div class="post">
-                <p>welcome to jching.xyz, est. 2024</p>
+                <p><b>welcome to jching.xyz, est. 2024</b></p>
                 <p>i am a millennial that grew up in california and florida</p>
                 <p>
                     <a class="tag tag-black" href="{{url_for('group', group=group)}}">{{group}}</a>
