Moved title to config.yaml.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>jching.xyz</title>
+        <title>{{app_name}}</title>
     </head>
     <style>
         p, label, input {
